--- a/src/css/Index.css
+++ b/src/css/Index.css
@@ -24,16 +24,14 @@
     font-weight: normal;
 }
 
-/* .search {
-    height: 35px !important;
-
-} */
+.offcanvas {
+    width: 150px;
+    height: 40vh;
+}
 
 .i-text {
     height: 100% !important;
     max-width: 20px !important;
-
-
 }
 
 .plus>img {
@@ -131,4 +129,12 @@ input:focus {
     height: 20px;
     width: 20px;
     margin: 0px;
+}
+
+@media (max-width:700px) {
+    header-logo {
+        width: 20px !important;
+        height: 25px;
+    }
+
 }
