--- a/src/css/Index.css
+++ b/src/css/Index.css
@@ -25,7 +25,7 @@
 }
 
 .offcanvas {
-    width: 150px;
+    width: 120px;
     height: 40vh;
 }
 
@@ -129,6 +129,11 @@ input:focus {
     margin: 0px;
 }
 
+.cartimg {
+    height: 20px;
+    width: 20px;
+}
+
 @media only screen and (max-width:700px) {
 
 
@@ -138,7 +143,7 @@ input:focus {
     }
 
     .cardbox {
-        width: 180px;
+        width: 192px;
     }
 
     .carousel-img {
