--- a/src/css/Index.css
+++ b/src/css/Index.css
@@ -110,6 +110,7 @@ input:focus {
 
 .productimage {
     max-height: 55vh;
+    min-height: 40vh;
     width: 60%;
 }
 
@@ -202,4 +203,54 @@ input:focus {
 
 .input-s:placeholder-shown {
     padding-left: 10%;
+}
+
+.cart-block {
+    min-height: 100vh;
+}
+
+.product-body {
+    min-height: 80vh;
+}
+
+.foooter-c {
+    margin-top: 20vh;
+    height: 100%;
+    width: 100% !important;
+    background-color: #172337;
+}
+
+.text-light1 {
+    color: rgb(255, 255, 255) !important;
+
+}
+
+.footer-border-mail {
+    border-left: solid grey 1px;
+}
+
+.scroll {
+    position: fixed !important;
+    bottom: 0.5rem !important;
+    right: 0.5rem !important;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    animation: fadeIn 700ms ease-in-out 1s both !important;
+    cursor: pointer !important;
+    z-index: 99;
+    text-align: center !important;
+    background-color: #f5eeee !important;
+    /* color: rgb(233, 225, 225) !important; */
+    margin-right: 15px;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
