--- a/src/css/Index.css
+++ b/src/css/Index.css
@@ -254,3 +254,11 @@ input:focus {
         opacity: 1;
     }
 }
+
+.p-sticky {
+    position: -webkit-sticky !important;
+    /* Safari */
+    position: sticky !important;
+    top: 0 !important;
+
+}
